# matching_poly_lib

./: Cargo.toml  README.md
src/: lib.rs
src/binary_graph_matching/: binary_representation.rs  matching_poly.rs  mod.rs
src/graph_matching/: graphs.rs  matching_poly.rs  mod.rs
src/matching/: base.rs  binary_representation.rs  graphs.rs  matching_poly.rs  mod.rs  petgraph.rs  weighted_graphs.rs
src/matching_raw_memory/: 2  matching_poly.rs  mod.rs
src/petgraph/: example_petgraphs.rs  mod.rs  petgraph.rs
src/polynomials/: hermite.rs  mod.rs
src/traits/: graph.rs  mod.rs
src/weighted_graph_matching/: address_weighted_polynomial.rs  binary_weighted_polynomial.rs  mod.rs  weighted_graphs.rs  weighted_polynomial_calculation.rs
