[package]
name = "matching_poly_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
num = "0.4.1"
permutator = "0.4.3"
petgraph = "0.6.3"
polynomial = "0.2.4"
tailcall = "0.1.5"
